--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: Arial, 'Times New Roman', Times;
   background-color: black;
   color: white;
 }
